                                  quantum circuit description
          - remove_clean_dits() - removes list of clean classical dits from
                                  quantum circuit description
    - Modified the signature of qpp::QCircuit::compress() to
      qpp::QCircuit::compress(bool compress_dits = false) so one can compress
      the clean classical dits as well

Version 2.3 - 2 May 2020
    - Added the following examples in the "examples" directory
          qram.cpp    - quantumly-accessible Random Access Memory over 
                        classical data
          layouts.cpp - various physical qubit layouts
    - Implemented qpp::QCircuit::
          bool operator==() const noexcept
          bool operator!=() const noexcept
      for quantum circuits simple (in)equality testing
    - Implemented
          qpp::super2kraus() - extracts a set of orthogonal (in the
                               Hilbert-Schmidt norm) Kraus operators from a
                               superoperator matrix ["operations.h"]
          qpp::bernoulli()   - generates Bernoulli-p random booleans
                               ["random.h"]
    - Kraus-related functions on full systems (not subsystems) now support
      input and output spaces of different dimensions, i.e., can now use
      non-square Kraus operators. All other Kraus-related functions for which
      the Kraus operators act on subsystems continue to require square Kraus
      operators.
    - Bugfix in qpp::QCircuit::add_circuit()
    - Fixed all Doxygen warnings (except spurious ones) 

Version 2.2 - 14 April 2020
    - Updated Google Test to version 1.10.0
    - Removed the Visual Studio solution (since it can be automatically
      generated by CMake), as we prefer to use CMake uniformly across all
      platforms
    - Implemented
          qpp::qRAM() - quantumly-accessible Random Access Memory over 
                        classical data (qRAM) ["operations.h"]